# BazelAaptButterknifeIssue

./: .gitignore  README.md  WORKSPACE  bazel-tutorial  maven_install.json
patches/: BUILD.bazel  patches.bzl
src/main/java/com/example/bazel/: BUILD
